--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <h1> Hello! My name is Marjory and this is my Senior Portforlio. </h1>
 
-      <h3> Link to my resume. </h3>
+    
 
-  <a class= "text" href="https://docs.google.com/document/d/1Mifzg_uPYAGdX_IK_-oSSpU7thHCcwJfKld6N1-pEsU/edit?usp=sharing">Resume</a>
+  <a class= "text" href="https://docs.google.com/document/d/1Mifzg_uPYAGdX_IK_-oSSpU7thHCcwJfKld6N1-pEsU/edit?usp=sharing"> Link to My Resume</a>
 
     <h2> Link to LinkedIn</h2>
-     <a class= "text" href="https://www.linkedin.com/in/marjory-vazquez-a9a976241/"> LinkedIn </a>
+     <a class= "text" href="https://www.linkedin.com/in/marjory-vazquez-a9a976241/"> LinkedIn </a> 
       <h2>These are some of the projects I've done: </h2>
 
       <a class= "text" href="https://popcode.org/?snapshot=f70a3d84-501d-4431-8fd0-ca5687e53dc3"> Social Action Proj3 </a>
