added gmetrix link

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <h1> Hello! My name is Marjory and this is my Senior Portforlio. </h1>
 
+ <h2> 
+<a class= "text" href="https://marjory21.github.io/NEW-Cert.github.io/" > Certification Practice </a>
+ </h2>
     
-
   <a class= "text" href="https://docs.google.com/document/d/1Mifzg_uPYAGdX_IK_-oSSpU7thHCcwJfKld6N1-pEsU/edit?usp=sharing"> Link to My Resume</a>
 
     <h2> Link to LinkedIn</h2>
